feat: Add country selection, full country analyses, and frontend improvements
- Add country selection API endpoint and frontend integration
- Create country-wide analysis script for full country coverage
- Fix map centering to use layer bounds instead of country bounds
- Add CORS middleware to API for frontend access
- Support both GeoJSON and Shapefile formats for GADM data
- Add root endpoint that redirects to API docs
- Add health check endpoint
- Update frontend to show country selection first, then runs
- Fix biodiversity layer loading and visualization
- Add comprehensive documentation for GADM levels and country analyses
- Fix model logging JSONB serialization issue
- Update .gitignore to exclude generated data and database files

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,14 @@ data2/
 *.cpg
 *.osm.pbf
 
+# Generated analysis results (too large for git)
+data/
+tmp/
+
+# Test files
+test_aoi*.geojson
+temp_*.geojson
+
 # Python
 __pycache__/
 *.py[cod]
