--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -55,9 +55,8 @@ requires = ["setuptools>=75"]
 build-backend = "setuptools.build_meta"
 
 [tool.ruff]
-select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
-line-length = 100
 target-version = "py311"
+line-length = 100
 exclude = [
     ".git",
     "__pycache__",
@@ -67,6 +66,10 @@ exclude = [
     "dist",
     "*.egg-info",
 ]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
+ignore = ["E501"]  # Line too long - handled by formatter
 
 [tool.ruff.format]
 quote-style = "double"
