--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,7 +36,9 @@ dependencies = [
     "python-dotenv>=1.0",
     "typer>=0.12",
     "rich>=13.7",
-    "jinja2>=3.1"
+    "jinja2>=3.1",
+    "mlflow>=2.14",
+    "wandb>=0.17"
 ]
 
 [project.optional-dependencies]
