--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,9 +3,9 @@ name = "aethera-backend"
 version = "0.1.0"
 description = "Core backend, geospatial engine, emissions, and orchestration for AETHERA."
 authors = [{name = "AETHERA Team"}]
-readme = "README.md"
+readme = "../README.md"
 license = {text = "Proprietary"}
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115",
     "uvicorn>=0.30",
@@ -37,8 +37,7 @@ dependencies = [
     "typer>=0.12",
     "rich>=13.7",
     "jinja2>=3.1",
-    "mlflow>=2.14",
-    "wandb>=0.17"
+    "jsonlogic-python>=1.0.0"
 ]
 
 [project.optional-dependencies]
@@ -57,27 +56,9 @@ requires = ["setuptools>=75"]
 build-backend = "setuptools.build_meta"
 
 [tool.ruff]
-target-version = "py311"
-line-length = 100
-exclude = [
-    ".git",
-    "__pycache__",
-    ".venv",
-    "venv",
-    "build",
-    "dist",
-    "*.egg-info",
-]
-
-[tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
-ignore = ["E501"]  # Line too long - handled by formatter
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-skip-magic-trailing-comma = false
-line-ending = "auto"
+line-length = 100
+target-version = "py311"
 
 [tool.mypy]
 python_version = "3.11"
