--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,7 +37,8 @@ dependencies = [
     "typer>=0.12",
     "rich>=13.7",
     "jinja2>=3.1",
-    "jsonlogic-python>=1.0.0"
+    "jsonlogic-python>=1.0.0",
+    "boto3>=1.34.0"
 ]
 
 [project.optional-dependencies]
