--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,7 +37,14 @@ dependencies = [
     "typer>=0.12",
     "rich>=13.7",
     "jinja2>=3.1",
-    "boto3>=1.34.0"
+    "boto3>=1.34.0",
+    "openai>=1.0.0",
+    "sentence-transformers>=2.3.0",
+    "python-docx>=1.1.0",
+    "weasyprint>=60.0",
+    "openpyxl>=3.1.0",
+    "pandas>=2.2",
+    "markdown>=3.5.0"
 ]
 
 [project.optional-dependencies]
@@ -45,6 +52,10 @@ dev = [
     "pytest>=8.3",
     "pytest-asyncio>=0.23",
     "pytest-cov>=5.0",
+    "pytest-mock>=3.14",
+    "pytest-xdist>=3.6",
+    "hypothesis>=6.100",
+    "httpx>=0.27",
     "ruff>=0.6",
     "mypy>=1.11",
     "types-requests",
