--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,7 +44,16 @@ dependencies = [
     "weasyprint>=60.0",
     "openpyxl>=3.1.0",
     "pandas>=2.2",
-    "markdown>=3.5.0"
+    "markdown>=3.5.0",
+    "opentelemetry-api>=1.22.0",
+    "opentelemetry-sdk>=1.22.0",
+    "opentelemetry-instrumentation-fastapi>=0.42b0",
+    "opentelemetry-instrumentation-httpx>=0.42b0",
+    "opentelemetry-instrumentation-psycopg>=0.42b0",
+    "opentelemetry-instrumentation-redis>=0.42b0",
+    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
+    "opentelemetry-exporter-prometheus>=1.22.0",
+    "prometheus-client>=0.19.0"
 ]
 
 [project.optional-dependencies]
