--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -47,12 +47,15 @@ dependencies = [
     "markdown>=3.5.0",
     "opentelemetry-api>=1.22.0",
     "opentelemetry-sdk>=1.22.0",
+    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
+    "opentelemetry-exporter-prometheus>=1.22.0",
     "opentelemetry-instrumentation-fastapi>=0.42b0",
     "opentelemetry-instrumentation-httpx>=0.42b0",
     "opentelemetry-instrumentation-psycopg>=0.42b0",
     "opentelemetry-instrumentation-redis>=0.42b0",
-    "opentelemetry-exporter-otlp-proto-http>=1.22.0",
-    "opentelemetry-exporter-prometheus>=1.22.0",
+    "opentelemetry-instrumentation-celery>=0.42b0",
+    "opentelemetry-instrumentation-requests>=0.42b0",
+    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
     "prometheus-client>=0.19.0"
 ]
 
