frontend and backend CI tests

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "opentelemetry-api>=1.22.0",
     "opentelemetry-sdk>=1.22.0",
     "opentelemetry-exporter-otlp-proto-http>=1.22.0",
-    "opentelemetry-exporter-prometheus>=1.22.0",
+    "opentelemetry-exporter-prometheus>=0.42b0",
     "opentelemetry-instrumentation-fastapi>=0.42b0",
     "opentelemetry-instrumentation-httpx>=0.42b0",
     "opentelemetry-instrumentation-psycopg>=0.42b0",
