--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "numpy>=1.26",
     "pyarrow>=15.0",
     "scikit-learn>=1.4",
+    "scipy>=1.11",
     "xarray>=2024.1",
     "rioxarray>=0.15",
     "pyproj>=3.6",
