--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -60,15 +60,19 @@ dependencies = [
     "prometheus-client>=0.19.0",
     "pyjwt>=2.8.0",
     "bcrypt>=4.1.0",
-    "python-jose[cryptography]>=3.3.0"
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.9",
+    "httpx>=0.27.0",
+    "email-validator>=2.0.0"
 ]
+
+[project.optional-dependencies]
 performance = [
     "dask>=2024.1",
     "dask-geopandas>=0.3.0",
     "distributed>=2024.1"
 ]
-
-[project.optional-dependencies]
 dev = [
     "pytest>=8.3",
     "pytest-asyncio>=0.23",
@@ -76,7 +80,6 @@ dev = [
     "pytest-mock>=3.14",
     "pytest-xdist>=3.6",
     "hypothesis>=6.100",
-    "httpx>=0.27",
     "ruff>=0.6",
     "mypy>=1.11",
     "types-requests",
