--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -44,7 +44,8 @@ dependencies = [
     "weasyprint>=60.0",
     "openpyxl>=3.1.0",
     "pandas>=2.2",
-    "markdown>=3.5.0"
+    "markdown>=3.5.0",
+    "matplotlib>=3.8.0"
 ]
 
 [project.optional-dependencies]
