Implement TimesFM integration for temporal forecasting
Week 1-2: TimesFM Integration (HIGHEST PRIORITY)

Historical Weather Data Integration:
- Set up Copernicus CDS API integration (ERA5Client)
- Create temporal data storage schema (schema_temporal.sql)
- Build data extraction pipeline for AOI coordinates (temporal_extraction.py)

TimesFM Service Implementation:
- Create backend/src/analysis/timesfm_service.py
- Integrate Prophet, ARIMA, and simple trend forecasting methods
- Build temporal feature extraction from ERA5 sequences
- Implement forecast generation for RESM (energy yield)
- Implement climate risk forecasting

Frontend Integration:
- Add Temporal Forecast tab to Run page
- Visualize future energy yield trends (Plotly line charts)
- Display climate risk projections (risk over time with color-coded markers)
- Integrate narrative explanations (LangChain-ready)

API Endpoints:
- GET /runs/{run_id}/forecasts/energy-yield
- GET /runs/{run_id}/forecasts/climate-risk
- GET /runs/{run_id}/forecasts

Dependencies:
- Added cdsapi, prophet, statsmodels to pyproject.toml
- Added CDS_API_KEY and CDS_API_URL to settings

Main Controller:
- Integrated temporal data extraction into analysis pipeline

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -56,7 +56,10 @@ dependencies = [
     "langchain-openai>=0.0.5",
     "xgboost>=2.0.0",
     "lightgbm>=4.0.0",
-    "optuna>=3.5.0"
+    "optuna>=3.5.0",
+    "cdsapi>=0.7.0",
+    "prophet>=1.1.5",
+    "statsmodels>=0.14.0"
 ]
 
 [project.optional-dependencies]
